--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(main main.cpp)
+add_executable(database database.cpp)
+add_executable(proxy proxy.cpp)
