--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if(BUILD_TESTS)
   enable_testing()
   add_subdirectory(third-party/gtest)
   file(GLOB CODE_TEST_SOURCES tests/*.cpp)
+  file(GLOB CODE_TEST_SOURCES tests/*.db)
   add_executable(check ${CODE_TEST_SOURCES})
   target_link_libraries(check code gtest_main gmock_main)
   add_test(NAME check COMMAND check)
