--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_TESTS "Build tests" OFF)
+include(CPack.cmake)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/code)
 
@@ -19,7 +20,6 @@ if(BUILD_TESTS)
   enable_testing()
   add_subdirectory(third-party/gtest)
   file(GLOB CODE_TEST_SOURCES tests/*.cpp)
-  file(GLOB CODE_TEST_SOURCES tests/*.db)
   add_executable(check ${CODE_TEST_SOURCES})
   target_link_libraries(check code gtest_main gmock_main)
   add_test(NAME check COMMAND check)
