--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -4,4 +4,4 @@ project(main)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(main main.cpp)
+add_executable(main main.cpp proxy.cpp database.cpp)
