--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,40 +1,29 @@
-name: CMake
+name: Cmake
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build_Linux:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Adding gtest
-      run: git clone https://github.com/google/googletest.git third-party/gtest -b release-1.11.0
+    - name: Set up CMake
+      run: sudo apt-get install -y cmake
 
-    - name: Install lcov
-      run: sudo apt-get install -y lcov
-
-    - name: Config code with tests
-      run: cmake -H. -B ${{github.workspace}}/build -DBUILD_TESTS=ON -DCMAKE_CXX_FLAGS='--coverage'
-
-    - name: Build code
-      run: cmake --build ${{github.workspace}}/build
-
-    - name: Run tests
+    - name: Build
       run: |
-        build/check
-        lcov --directory . --capture --output-file coverage.info
-        lcov --remove coverage.info '/usr/*' --output-file coverage.info
-        lcov --remove coverage.info '${{github.workspace}}/third-party/gtest/*' --output-file coverage.info
-        lcov --list coverage.info
+        cmake -S . -B build
+        cmake --build build --config Release
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ${{ github.workspace }}/coverage.info
+        name: Tar.Gz_artifact
+        path: ${{ github.workspace }}/artifacts/*.tar.gz
