--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,48 @@
-cmake_minimum_required(VERSION 3.4)
-project(rk2)
+cmake_minimum_required(VERSION 3.10)
+
+project(RK2)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(BUILD_TESTS "Build tests" OFF)
-include(CPack.cmake)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/code)
+set(SOURCES
+    code/main.cpp
+    code/proxy.cpp
+    code/database.cpp
+)
+
+# Добавление исполняемого файла
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Добавление пути к заголовочным файлам
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Добавление заголовочных файлов
+set(HEADERS
+    code/databaseparent.h
+    code/proxy.h
+    code/database.h
+)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${HEADERS})
+
+include(CPack.cmake)
+set(CPACK_SOURCE_INSTALLED_DIRECTORIES "${CMAKE_SOURCE_DIR}")
 
 if(BUILD_TESTS)
   add_compile_options(--coverage)
 endif()
 
-add_library(code STATIC ${CMAKE_CURRENT_SOURCE_DIR}/code/main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/code/proxy.cpp ${CMAKE_CURRENT_SOURCE_DIR}/code/database.cpp)
-target_include_directories(code PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code)
-target_link_libraries(code gcov)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
 
 if(BUILD_TESTS)
   enable_testing()
   add_subdirectory(third-party/gtest)
   file(GLOB CODE_TEST_SOURCES tests/*.cpp)
   add_executable(check ${CODE_TEST_SOURCES})
-  target_link_libraries(check code gtest_main gmock_main)
+  target_link_libraries(check gtest_main gmock_main)
   add_test(NAME check COMMAND check)
 endif()
-include(CPackConfig.cmake)
